fix unlimited empty squares not showing and char3/4 wrong image in unlimited

--- a/styles.css
+++ b/styles.css
@@ -262,7 +262,7 @@ ul {
             }
 
             .grid-input {
-                background-image: url("/assets/empty-char-s.jpg");
+                background-image: url("assets/empty-char-s.jpg");
                 height: 74px;
                 background-size: 74px 74px;
             }
